tests/expectations/compiler/function/empty_arglist_fail.out
Error [ETYC0372113]: Cannot define a function with no parameters.
    --> compiler-test:2:1
     |
   2 | @no_inline
     | ^^^^^^^^^^
   3 | fn x() -> u8 {
     | ^^^^^^^^^^^^^^
   4 |     return 0u8;
     |     ^^^^^^^^^^^
   5 | }
     | ^
Error [ETYC0372170]: Cannot define a function with only empty parameters.
    --> compiler-test:6:1
     |
   6 | @no_inline
     | ^^^^^^^^^^
   7 | fn y(a: [u8;0]) -> [u8;0] {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   8 |     return a;
     |     ^^^^^^^^^
   9 | }
     | ^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:10:9
     |
  10 | program test.aleo {}
     |         ^^^^^^^^^
